@@ -6,7 +6,7 @@ Date: 2018-07-23
 Author: Laure Cougnaud
 Maintainer: Laure Cougnaud <laure.cougnaud@openanalytics.eu>
 Description: This package enables the creation of report with customizable visualization of patient profiles.
-Imports: ggplot2, plyr, cowplot, haven, tools, reshape2, knitr, glpgStyle, grid
+Imports: ggplot2, plyr, cowplot, haven, tools, reshape2, knitr, glpgStyle, grid, viridis
 Suggests: pander
 License: Software for Internal Use at Open Analytics NV
 RoxygenNote: 6.0.1
