@@ -35,6 +35,7 @@ importFrom(plyr,daply)
 importFrom(plyr,ddply)
 importFrom(plyr,dlply)
 importFrom(reshape2,melt)
+importFrom(stats,reorder)
 importFrom(tools,file_path_sans_ext)
 importFrom(tools,texi2pdf)
 importFrom(viridis,viridis)
