@@ -77,6 +77,7 @@ loadDataADaM <- function(files,
 #' the \code{format} parameter of the \code{\link{strptime}} function).
 #' See the 'Details' section of the help of the function,
 #' for more information about this format.
+#' @param colName string with name of column, used in message (if any).
 #' @param verbose logical, if TRUE (by default) progress messages are printed during execution
 #' @return vector of class \code{\link{POSIXct}}
 #' @author Laure Cougnaud
