@@ -10,6 +10,7 @@
     o createSubjectProfileReport/subjectProfileCombine: add refLines parameter
     o new addReferenceLinesProfilePlot function
     o add bookmark functionality
+    o include missing values in palette
 0.0.2
     o remove glpgUtility from the dependencies
 0.0.1
